--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 <div class="col-lg-6 ">
                     <div class="section-title text-center">
                         <h2>Recent Work</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Take a look at some of my recent works across web development, graphic design, and more.</p>
                     </div>
                 </div>
             </div>
